--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,7 @@ jobs:
       - run: dotnet restore
       - run: dotnet build
       - run: dotnet test --no-build AbstractEnum.Tests
+      - run: dotnet pack
+      - store_artifacts:
+          path: /*.nupkg
+        
