--- a/AbstractEnum.Net/AbstractEnum.Net.csproj
+++ b/AbstractEnum.Net/AbstractEnum.Net.csproj
@@ -3,8 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>feitzi.AbstractEnum.Net.Sample</PackageId>
-        <Version>1.0.0</Version>
+        <Version>0.0.2</Version>
         <Authors>Mathias Feitzinger (mathias@feitzinger.org)</Authors>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
 </Project>
