--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: find .
-      - run: dotnet nuget push *.nupkg --api-key ${NUGET_KEY} --source ${NUGET_SOURCE	}
+      - run: dotnet nuget push *.nupkg --api-key ${NUGET_KEY} --source ${NUGET_SOURCE}
 workflows:
   version: 2
   build-and-publish:
@@ -48,9 +48,9 @@ workflows:
                 - develop
     jobs:
       - build
-  commit:
-    jobs:
-      - build
+#  commit:
+#    jobs:
+#      - build
 
   
         
