--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - run: dotnet restore
-      - run: dotnet build
+      - run: dotnet build --configuration Release
       - run: dotnet test --no-build AbstractEnum.Tests
       - run: dotnet pack --output nugetPackages
       - store_artifacts:
@@ -48,9 +48,13 @@ workflows:
                 - develop
     jobs:
       - build
-#  commit:
-#    jobs:
-#      - build
+  commit:
+    branches:
+      ignore:
+        - master
+        - circleCiBuild
+    jobs:
+      - build
 
   
         
