--- a/AbstractEnum.Net/AbstractEnum.Net.csproj
+++ b/AbstractEnum.Net/AbstractEnum.Net.csproj
@@ -3,8 +3,13 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>feitzi.AbstractEnum.Net</PackageId>
-        <Version>0.0.1</Version>
         <Authors>Mathias Feitzinger (mathias@feitzinger.org)</Authors>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="GitVersionTask" Version="4.0.1-beta1-59" >
+          <PrivateAssets>All</PrivateAssets>
+      </PackageReference>
+    </ItemGroup>
 
 </Project>
