--- a/AbstractEnum.Net/AbstractEnum.Net.csproj
+++ b/AbstractEnum.Net/AbstractEnum.Net.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="GitVersionTask" Version="4.0.0">
+      <PackageReference Include="GitVersionTask" Version="4.0.1-beta1-51">
           <PrivateAssets>All</PrivateAssets>
       </PackageReference>
     </ItemGroup>
