--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,11 @@ workflows:
   build-and-publish:  
     jobs:
       - build
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            only: /.*/
       - publishNuget:
           requires:
             - build
