--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
   version: 2
   build-and-publish:  
     jobs:
-      - build
+      - build:
         filters:
           tags:
             only: /^v.*/
