changed Namespace to AbstractEnumDotNet The namespace AbstractEnum.net confused with the Type AbstractEnum So autocompletion etc. should be easier

--- a/AbstractEnum.Net/AbstractEnum.Net.csproj
+++ b/AbstractEnum.Net/AbstractEnum.Net.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>AbstractEnum.Net</PackageId>
         <Authors>Mathias Feitzinger (mathias@feitzinger.org)</Authors>
+        <RootNamespace>AbstractEnumDotNet</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
