--- a/AbstractEnum.Tests/AbstractEnum.Tests.csproj
+++ b/AbstractEnum.Tests/AbstractEnum.Tests.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>netcoreapp2.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <RootNamespace>Test.AbstractEnumDotNet</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
