--- a/AbstractEnum.Net/AbstractEnum.Net.csproj
+++ b/AbstractEnum.Net/AbstractEnum.Net.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <PackageId>AbstractEnum.Net</PackageId>
         <Authors>Mathias Feitzinger (mathias@feitzinger.org)</Authors>
         <RootNamespace>AbstractEnumDotNet</RootNamespace>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="GitVersionTask" Version="4.0.1-beta1-59">
+      <PackageReference Include="GitVersionTask" Version="5.5.1">
           <PrivateAssets>All</PrivateAssets>
       </PackageReference>
     </ItemGroup>
