--- a/AbstractEnum.Net/AbstractEnum.Net.csproj
+++ b/AbstractEnum.Net/AbstractEnum.Net.csproj
@@ -1,17 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <PackageId>AbstractEnum.Net</PackageId>
         <Authors>Mathias Feitzinger (mathias@feitzinger.org)</Authors>
         <RootNamespace>AbstractEnumDotNet</RootNamespace>
         <LangVersion>9</LangVersion>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="GitVersionTask" Version="5.5.1">
-          <PrivateAssets>All</PrivateAssets>
-      </PackageReference>
-    </ItemGroup>
-
 </Project>
