--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,25 +1,34 @@
 name: .NET
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    push:
+        branches: [ master ]
+    pull_request:
+        branches: [ master ]
 
 jobs:
-  build:
+    build:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+        steps:
+            -   uses: actions/checkout@v2
+            -   name: Install GitVersion
+                uses: gittools/actions/gitversion/setup@v0.9.7
+                with:
+                    versionSpec: '5.x'
+            -   name: Setup .NET
+                uses: actions/setup-dotnet@v1
+                with:
+                    dotnet-version: 5.0.x
+            -   name: Restore dependencies
+                run: dotnet restore
+            -   name: Build
+                run: dotnet build --no-restore
+            -   name: Determine Version
+                uses: gittools/actions/gitversion/execute@v0.9.7
+                with:
+                    useConfigFile: true
+                    updateAssemblyInfo: true
+            -   name: Test
+                run: dotnet test --no-build --verbosity normal
